<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:verticalScrollbarPosition="defaultPosition"
              android:layout_width="match_parent"
              android:scrollX="0sp"
              android:scrollY="0sp"
              android:layout_height="wrap_content">

    <LinearLayout
            android:scrollbars="vertical"
            android:scrollbarAlwaysDrawVerticalTrack="true"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

        <TextView
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/goal_heading"
                android:textStyle="bold"
                android:id="@+id/textView2"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/goal_body"
                android:id="@+id/textView3"/>

        <TextView
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setup_heading"
                android:textStyle="bold"
                android:id="@+id/textView4"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setup_body"
                android:id="@+id/textView5"/>

        <TextView
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gameplay_heading"
                android:textStyle="bold"
                android:id="@+id/textView6"/>

        <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/gameplay_body"
                android:id="@+id/textView7"/>

        <TextView
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scoring_heading"
                android:textStyle="bold"
                android:id="@+id/textView8"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scoring_body"
                android:id="@+id/textView9"/>

        <TextView
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tips_heading"
                android:textStyle="bold"
                android:id="@+id/textView10"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tips_body"
                android:id="@+id/textView11"/>

        <Button android:layout_marginTop="20dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ok_message"
                android:id="@+id/ok_Button"/>


    </LinearLayout>
    </ScrollView>